# fhirpath-benchmarks

./: .gitignore  CLAUDE.md  lefthook.yml  package-lock.json  package.json  run-all.sh  update-website-results.sh
.github/workflows/: deploy-website.yml
.junie/: guidelines.md
docs/adr/: 001-fhirpath-benchmarking-website.md
implementations/clojure/: README.md  deps.edn
implementations/csharp/: TestRunner.cs
implementations/go/: main.go
results/: clojure_benchmark_results.json  clojure_test_results.json  clojure_test_results_2025_07_26_16_38_06_473807Z.json  comparison_report.json  comparison_report_1753516671.json  csharp_benchmark_results.json  csharp_test_results.json  go_benchmark_results.json  go_test_results.json  java_benchmark_results.json  java_test_results.json  javascript_benchmark_results.json  javascript_test_results.json  python_benchmark_results.json  python_test_results.json  rust_benchmark_results.json  rust_test_results.json
runner/: Cargo.toml  README.md
runner/src/: config.rs  lib.rs  main.rs  results.rs  runner.rs  test_cases.rs  utils.rs
runner/src/implementations/: clojure.rs  csharp.rs  go.rs  java.rs  javascript.rs  mod.rs  python.rs  rust.rs
runner/website/public/test-results/latest/: comparison_report.json
tasks/: fsd-implementation.md  phase-1-foundation.md  phase-2-rust-runner.md  phase-3-core-website.md  phase-4-advanced-visualization.md  phase-5-polish-optimization.md
website/: biome.json  index.html  lefthook.yml  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
website/public/: implementations.json
(+63 files in other folders)
