[package]
name = "fhirpath-runner"
version = "0.1.0"
edition = "2021"
authors = ["FHIRPath Benchmarks Team"]
description = "High-performance test runner for FHIRPath implementations"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
glob = "0.3"
sysinfo = "0.30"
futures = "0.3"
async-trait = "0.1"
