[package]
name = "fhirpath-runner"
version = "0.1.0"
edition = "2024"
authors = ["OctoFHIR Team <funyloony@gmail.com>"]
license = "Apache-2.0"
description = "High-performance test runner for FHIRPath implementations"
repository = "https://github.com/octofhir/fhirpath-benchmarks.git"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
glob = "0.3"
sysinfo = "0.36"
futures = "0.3"
async-trait = "0.1"
